fixed spacing problems

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -39,6 +39,7 @@
         text-align: center;
         font-size: 25px;
         line-height: 0.5;
+        margin-bottom: 5%;
     }
 
     .checkout_content {
@@ -46,6 +47,7 @@
         text-align: center;
         font-size: 25px;
         line-height: 0.5;
+        margin-bottom: 16%;
     }
 
     .checkedin_msg {
